# geoquizz_backend

./: .gitignore  docker-compose.yml
django_project/: Dockerfile  manage.py  pyproject.toml
django_project/authorization/: admin.py  factories.py  models.py  serializers.py  tests.py  urls.py  views.py
django_project/authorization/migrations/: 0001_initial.py  0002_alter_user_options.py
django_project/game/: admin.py  factories.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
django_project/game/migrations/: 0001_initial.py  0002_auto_20210416_1726.py  0003_round.py  0004_auto_20210416_1803.py  0005_alter_round_game.py  0006_auto_20210416_1829.py  0007_alter_round_random_point.py  0008_alter_round_num.py  0009_game_game_over.py  0010_rename_game_over_game_is_over.py  0011_category_rounds_count.py  0012_auto_20210420_1546.py  0013_round_score.py  0014_auto_20210420_1831.py  0015_game_end_date.py  0016_remove_game_end_date.py  0017_alter_game_category.py  0018_category_max_score.py
django_project/geoquizz_backend/: asgi.py  settings.py  urls.py  wsgi.py
